--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model prjCatChaOnlineShop.Models.GameProductTotal
 @{
     ViewData["Title"] = "GameProduct";
     Layout = "~/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml";
@@ -62,7 +62,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalToggleLabel">新增遊戲商品</h5>
+                    <h5 class="modal-title" id="addGProductModalToggleLabel">新增遊戲商品</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                             aria-label="Close"></button>
                 </div>
@@ -87,8 +87,6 @@
                         <div class="form-group">
                             <label>類別：</label>
                             <select class="form-control" id="create_category" name="ProductCategory">
-                                <option value="GameProductCatgory1">貓咪</option>
-                                <option value="GameProductCatgory2">道具</option>
                             </select>
                         </div>
 
@@ -137,8 +135,6 @@
                 <select class="form-select" id="payList">
                     <option value="" selected disabled>請選擇類別</option>
                     <option value="">全部訂單</option>
-                    <option value="貓咪">貓咪</option>
-                    <option value="道具">道具</option>
                 </select>
             </div>
         </div>
@@ -182,41 +178,47 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label>ID</label>
-                                            <input type="text" class="form-control" readonly disabled id="edit_id" name="ProductId">
+                                            <input type="text" class="form-control" id="editid" readonly disabled name="ProductId">
                                         </div>
                                         <div class="col-md-6">
                                             <label>名稱</label>
-                                            <input type="text" class="form-control" id="edit_name" name="ProductName">
+                                            <input type="text" class="form-control" id="editname" name="ProductName">
                                         </div>
                                         <div class="col-md-6">
                                             <label>類別</label>
-                                            <select class="form-control" id="edit_category" name="ProductCategory">
+                                            <select class="form-control" id="editcategory" name="ProductCategory">
                                             </select>
                                         </div>
                                         <div class="col-md-6">
                                             <label>描述</label>
-                                            <input type="text" class="form-control" id="edit_description" name="ProductDescription">
+                                            <input type="text" class="form-control" id="editdescription" name="ProductDescription">
                                         </div>
                                         <div class="col-md-6">
                                             <label>價格</label>
-                                            <input type="text" class="form-control" id="edit_price" name="ProductPrice ">
+                                            <input type="text" class="form-control" id="editprice" name="ProductPrice ">
                                         </div>
 
                                         <div class="col-md-6">
                                             <label>已被購買數量</label>
-                                            <input type="text" class="form-control" id="edit_purchasedquantity" name="PurchasedQuantity">
+                                            <input type="text" class="form-control" id="editpurchasedquantity" name="PurchasedQuantity">
                                         </div>
                                         <div class="col-md-6">
                                             <label>剩餘數量</label>
-                                            <input type="text" class="form-control" id="edit_remainingquantity" name="RemainingQuantity">
+                                            <input type="text" class="form-control" id="editremainingquantity" name="RemainingQuantity">
                                         </div>
                                         <div class="col-md-6">
                                             <label>抽獎機率</label>
-                                            <input type="text" class="form-control" id="edit_rate" name="LotteryProbability">
+                                            <input type="text" class="form-control" id="editrate" name="LotteryProbability">
                                         </div>
                                         <div class="col-md-12">
                                             <label>圖片</label>
-                                            <input type="file" class="form-control" id="edit_image" name="ProductImage">
+                                            <input type="file"  accept="image/*" class="form-control" id="editimage" name="ProductImage">
+                                        </div>
+                                        <div class=" mb-3 align-items-center mt-3">
+                                            <label>目前圖片：</label>
+                                            <div class="d-flex justify-content-center">
+                                                <img id="previewImage" src="" alt="Image Preview" class="w-100 border">
+                                            </div>
                                         </div>
 
                                         <button type="submit" class="mt-3 btn btn-primary btn-block  EditProduct_Save" id="EditProduct_Save"
@@ -235,8 +237,9 @@
             </div>
         </div>
     </div>
-
 </div>
+
+
 
 @section Scripts{
     <script>
@@ -258,21 +261,25 @@
 
         $('#GProduct-table').DataTable({
             "ajax": '@Url.Action("LoadDataTable", "GameProduct")',
+            type: 'GET',
             "columns": [
                 { data: 'productId' },
                 { data: 'productName' },
                 { data: 'productCategory' },
                 { data: 'productDescription' },
                 { data: 'productPrice' },
-                { data: 'productImage' },
+                { data: 'productImage',
+                        render: function (data, type, row) {
+                        return `<img class="img-thumbnail" src="${data}">`;
+                    }},
                 { data: 'purchasedQuantity' },
                 { data: 'remainingQuantity' },
                 { data: 'lotteryProbability' },
                 {
-                    data: null,
+                    data: "productId",
                     render: function (data, type, row, meta) {
-                        var editButton = '<button class="btn btnEdit" data-bs-toggle="modal" href="#EditModalToggle" role="button" data-productId="' + row.productId + '"><i class="fas fa-edit"></i></button>';
-                        var deleteButton = '<button class="btnDelete" onclick="userDelete(' + row.productId + ')"><a href="#" id="b5"><i class="fas fa-trash-alt"></i></a></button>';
+                        var editButton = `<button class="btn btnEdit"  data-productId="${row.productId}" data-bs-toggle="modal" href="#EditModalToggle" role="button" ><i class="fas fa-edit"></i></button>`;
+                        var deleteButton = `<button class="btnDelete" onclick="userDelete(' + row.productId + ')"><a href="#" id="b5"><i class="fas fa-trash-alt"></i></a></button>`;
                         return editButton + ' | ' + deleteButton;
                     }
                 },
@@ -281,41 +288,58 @@
             responsive: true, 
             "searching": false, 
         });
-
         //編輯==================
         $('#GProduct-table').on('click', '.btnEdit', function () {
-            var productId = $(this).data('productId'); // 從按鈕的 data-productId 屬性中獲取 productId
+            var productId = $(this).data('productId');
+            console.log("Clicked productId:", productId);//檢查ID
             $.ajax({
                 url: '@Url.Action("EditProduct", "GameProduct")',
                 type: 'GET',
-                data: { id: productId }, // id=>這個名稱要確保欄位跟controller的參數名稱相同（傳遞商品ID或其他必要的參數）
-                success: function (data) {
-                    console.log(data);
-                    $('#edit_id').val(data.data.productId);
-                    $('#edit_name').val(data.data.productName);
-                    $('#edit_description').val(data.data.productDescription);
-                    $('#edit_category').val(data.data.productCategory);
-                    $('#edit_price').val(data.data.productPrice);
-                    $('#edit_purchasedquantity').val(data.data.purchasedQuantity);
-                    $('#edit_remainingquantity').val(data.data.remainingQuantity);
-                    $('#edit_rate').val(data.data.lotteryProbability);
-                    $('#edit_image').attr('src', data.data.productImage);
+                data: { id: productId },
+                success: function (response) {
+                    console.log(response);
+                    $('#editid').val(response.data.productId);
+                    $('#editname').val(response.data.productName);
+                    $('#editdescription').val(response.data.productDescription);
+                    $('#editcategory').val(response.data.productCategory);
+                    $('#editprice').val(response.data.productPrice);
+                    $('#editpurchasedquantity').val(response.data.purchasedQuantity);
+                    $('#editremainingquantity').val(response.data.remainingQuantity);
+                    $('#editrate').val(response.data.lotteryProbability);
+                    $('#previewImage').attr('src', response.data.productImage);
+                    $('#EditModalToggle').modal('show');
                 }
             });
+        });
+        //編輯圖片部分
+        $('#editimage').on('change', function () {
+            const file = this.files[0];
+
+            if (file && file.type.startsWith('image/')) {
+                const reader = new FileReader();
+
+                reader.onload = function (e) {
+                    $('#previewImage').attr('src', e.target.result);
+                };
+
+                reader.readAsDataURL(file);
+            } else {
+                alert('請選擇圖片.');
+            }
         });
 
         //==================編輯資料後，按下「儲存」按鈕的點擊事件處理
         $('.EditProduct_Save').click(function () {
 
-            var ProductId = $('#edit_id').val()
-            var ProductName = $('#edit_name').val();
-            var ProductDescription = $('#edit_description').val();
-            var ProductCategory = $('#edit_category').val();
-            var ProductPrice = $('#edit_price').val();
-            var PurchasedQuantity = $('#edit_purchasedquantity').val();
-            var RemainingQuantity = $('#edit_remainingquantity').val();
-            var LotteryProbability = $('#edit_rate').val();
-            var ProductImage = $('#edit_image').val();
+            var ProductId = $('#editid').val()
+            var ProductName = $('#editname').val();
+            var ProductDescription = $('#editdescription').val();
+            var ProductCategory = $('#editcategory').val();
+            var ProductPrice = $('#editprice').val();
+            var PurchasedQuantity = $('#editpurchasedquantity').val();
+            var RemainingQuantity = $('#editremainingquantity').val();
+            var LotteryProbability = $('#editrate').val();
+            var ProductImage = $('#editimage').val();
 
 
             var editProduct = {
@@ -342,13 +366,13 @@
                             text: response.message
                         });
 
-                        // 關閉modal
+                         //關閉modal
                         $('#EditModalToggle').modal('hide');
 
-                        // 重新整理dataTable
-                        $('#GProduct-table').DataTable().ajax.reload(); // 這將重新載入dataTable的資料
+                         //重新整理dataTable
+                        $('#GProduct-table').DataTable().ajax.reload();  //這將重新載入dataTable的資料
                     } else {
-                        // 更新失敗
+                         更新失敗
                         Swal.fire({
                             icon: 'error',
                             title: '失敗',
@@ -357,8 +381,8 @@
                     }
                 },
                 error: function (error) {
-                    // 錯誤處理
-                    // 會員編輯失敗，顯示錯誤訊息
+                     //錯誤處理
+                     //會員編輯失敗，顯示錯誤訊息
                     console.log(error);
                 }
             });
@@ -442,38 +466,23 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         //篩選類別===========================================
-        $(document).ready(function () {
-            var table = $('#GProduct-table').DataTable({
-                responsive: true,
-                // 在這裡指定需要過濾的列，商品類別為第三列->索引2
-                columnDefs: [
-                    { targets: 2, searchable: true }
-                ]
-            });
+        //$(document).ready(function () {
+        //    var table = $('#GProduct-table').DataTable({
+        //        responsive: true,
+        //        // 在這裡指定需要過濾的列，商品類別為第三列->索引2
+        //        columnDefs: [
+        //            { targets: 2, searchable: true }
+        //        ]
+        //    });
 
-            // 綁定select元素的change事件，當選擇條件改變時，重新過濾表格資料
-            $('#payList').on('change', function () {
-                var filterOption1 = $(this).val();
+        //    // 綁定select元素的change事件，當選擇條件改變時，重新過濾表格資料
+        //    $('#payList').on('change', function () {
+        //        var filterOption1 = $(this).val();
 
-                // 使用DataTable的column().search()方法進行過濾
-                table.column(2).search(filterOption1).draw();
-            });
+        //        // 使用DataTable的column().search()方法進行過濾
+        //        table.column(2).search(filterOption1).draw();
+        //    });
 
 
 
@@ -517,7 +526,7 @@
                 }
             })
         }
-        })
+
         
     </script>
 }
