--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Banner/Banner.cshtml
@@ -61,40 +61,36 @@
 
             <!---新增Banner modal-->
             <div class="modal fade" id="addBannerModalToggle" aria-hidden="true"
-                 aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                 aria-labelledby="addBannerModalToggleLabel" tabindex="-1">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalToggleLabel">新增Banner</h5>
+                    <h5 class="modal-title" id="addBannerModalToggleLabel">新增Banner</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <form>
                                 <div class="form-group">
-                                    <!-- <label>ID：</label> -->
-                                    <input type="hidden" class="form-control" disabled readonly>
-                                </div>
-
-                                <div class="form-group">
                                     <label>名稱：</label>
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" id="create-name" name="Banner">
                                 </div>
 
                                 <div class="form-group">
-                                    <label>類型：</label>
-                                    <select class="form-control">
-                                        <option value="BannerCatgory1">主頁</option>
-                                        <option value="BannerCatgory2">促銷</option>
-                                    </select>
+                                    <label>發佈日期：</label>
+                                <input type="datetime-local" id="create-date" class="form-control" name="PublishDate">
                                 </div>
 
                                 <div class="col-md-12">
                                     <label>圖片：</label>
-                                    <input type="file" class="form-control">
+                                    <input type="file" class="form-control" id="create-image" name="Link" accept="image/*"  />
                                 </div>
 
-                                <button class="btn btn-danger btn-block" style="width: 100%;">儲存</button>
+                        <div id="preview-createimage"></div>
+                        <button  class="mt-3 btn btn-primary btn-block" name="submitButton" id="submitButton"
+                                style="width: 100%;">
+                            儲存
+                        </button>
                             </form>
                         </div>
                     </div>
@@ -103,7 +99,7 @@
             <!---新增Banner modal-->
 
             <!---篩選Banner類型-->
-    <div class="container-fluid mt-4 mb-3">
+@*     <div class="container-fluid mt-4 mb-3">
         <div class="row align-items-center mb-2">
             類別篩選：
             <div class="col d-flex justify-content-between">
@@ -115,7 +111,7 @@
                 </select>
             </div>
         </div>
-    </div>
+    </div> *@
             <!---篩選Banner類型-->
 
             <div class="container-fluid mt-4">
@@ -127,7 +123,7 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>名稱</th>
-                                    <th>類型</th>
+                                    <th>發佈時間</th>
                                     <th>圖片</th>
                                     <th>編輯/刪除</th>
                                 </tr>
@@ -135,12 +131,12 @@
                             <tbody>
                             </tbody>
                     <!--編輯彈出視窗-->
-                    <div class="modal fade" id="exampleModalToggle" aria-hidden="true"
-                         aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                    <div class="modal fade" id="EditBannerModalToggle" aria-hidden="true"
+                         aria-labelledby="EditBannerModalToggleLabel" tabindex="-1">
                         <div class="modal-dialog modal-dialog-centered">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalToggleLabel">編輯 Edit</h5>
+                                    <h5 class="modal-title" id="EditBannerModalToggleLabel">編輯 Edit</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                 </div>
@@ -149,26 +145,32 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label>ID</label>
-                                            <input type="text" class="form-control" readonly disabled>
+                                            <input type="text" class="form-control" readonly disabled id="editor-id" name="BannerId">
                                         </div>
                                         <div class="col-md-6">
                                             <label>名稱</label>
-                                            <input type="text" class="form-control">
+                                            <input type="text" class="form-control" id="editor-name" name="Banner">
                                         </div>
                                         <div class="col-md-6">
-                                            <label>類型</label>
-                                            <select class="form-control">
-                                                <option value="BannerCatgory1">主頁</option>
-                                                <option value="BannerCatgory2">促銷</option>
+                                            <label>發佈日期</label>
+                                            <input type="datetime-local" class="form-control" id="editor-date" name="PublishDate">
                                             </select>
                                         </div>
                                         <div class="col-md-12">
                                             <label>圖片</label>
-                                            <input type="file" class="form-control">
+                                            <input type="file" class="form-control" id="editor-img" name="Link" accept="image/*">
                                         </div>
 
-                                        <button type="submit" class="mt-3 btn btn-primary btn-block"
-                                                style="width: 100%;">
+                                        <div class=" mb-3 align-items-center mt-3">
+                                            <label>目前圖片：</label>
+                                            <div class="d-flex justify-content-center">
+                                                <img id="previewImage" src="" alt="Image Preview" class="w-100 border">
+                                            </div>
+                                        </div>
+
+
+                                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="submitButton-edior" id="submitButton-edior"
+                                                    style="width: 100%;">
                                             儲存
                                         </button>
                                     </div>
@@ -206,98 +208,214 @@
             });
         });
 
-        //載入DataTable=================================
-
-        // $('#Banner-table').DataTable({
-        //     "ajax": '@Url.Action("LoadDataTable", "Banner")',
-        //     "columns": [
-        //         { data: 'productId' },
-        //         { data: 'productName' },
-        //         { data: 'productCategory' },
-        //         { data: 'productDescription' },
-        //         { data: 'productPrice' },
-        //         { data: 'productImage' },
-        //         { data: 'purchasedQuantity' },
-        //         { data: 'remainingQuantity' },
-        //         { data: 'lotteryProbability' },
-        //         {
-        //             data: null,
-        //             render: function (data, type, row, meta) {
-        //                 var editButton = '<button class="btn btnEdit" data-bs-toggle="modal" href="#EditModalToggle" role="button" data-productId="' + row.productId + '"><i class="fas fa-edit"></i></button>';
-        //                 var deleteButton = '<button class="btnDelete" onclick="userDelete(' + row.productId + ')"><a href="#" id="b5"><i class="fas fa-trash-alt"></i></a></button>';
-        //                 return editButton + ' | ' + deleteButton;
-        //             }
-        //         },
-        //     ],
-        //     "paging": true,
-        //     responsive: true,
-        //     "searching": false,
-        // });
-
-
-
-
-
-        //篩選類別
+        //初始化表格==================================================
         $(document).ready(function () {
             var table = $('#Banner-table').DataTable({
                 responsive: true,
-                // 在這裡指定需要過濾的列，商品類別為第三列->索引2
-                columnDefs: [
-                    { targets: 2, searchable: true }
+                "paging": true,
+                "ajax": {
+                    "url": "@Url.Action("LoadDataTable", "Banner" , new{ area="AdminCMS"})",
+                    type: 'GET',
+                },
+                //載入欄位資料庫資料==========================================
+                "columns": [
+                    { "data": "bannerId" },
+                    { "data": "banner" },
+                    { "data": "publishDate" },
+                    {
+                        "data": "link",
+                        render: function (data, type, row) {
+                            return `<img class="img-thumbnail" src="${data}">`;
+                        }
+                    },
+                    {
+                        "data": "bannerId",
+                        "render": function (data, type, row) {
+                            var deleteUrl = '@Url.Action("Delete", "Bannrt", new { area = "AdminCMS", id = "bannerId" })';
+                            deleteUrl = deleteUrl.replace('bannerId', row.bannerId);
+                            return `<button class="edit-button" data-id="${row.bannerId}" data-bs-toggle="modal" data-bs-target="#EditBannerModalToggle"><i class="fas fa-edit"></i></button> |
+                                                                                                                <button class="btn delete-button" data-id="${row.bannerId}" ><i class="fas fa-trash-alt"></i></button>
+        `;
+                        }
+                    }
                 ]
-            });
-            // 綁定select元素的change事件，當選擇條件改變時，重新過濾表格資料
-            $('#payList').on('change', function () {
-                var filterOption1 = $(this).val();
-
-                // 使用DataTable的column().search()方法進行過濾
-                table.column(2).search(filterOption1).draw();
+            })
+        });
+        //編輯按鈕==============================================
+        $('#Banner-table').on('click', '.edit-button', function () {
+            let id = $(this).data('id')
+            $.ajax({
+                url: '/AdminCMS/Banner/EditBanner?id=' + id,
+                type: 'GET',
+                success: function (response) {
+                    if (response.success) {
+                        $('#editor-id').val(response.data.bannerId);
+                        $('#editor-name').val(response.data.banner);
+                        $('#editor-date').val(response.data.publishDate);
+                        $('#previewImage').attr('src', response.data.link)
+                        console.log(response.data)
+                       
+                    } else {
+                        alert(response.message);
+                    }
+                }
             });
         });
 
+        //編輯圖片部分======================================
+        $('#editor-img').on('change', function () {
+            const file = this.files[0];
 
+            if (file && file.type.startsWith('image/')) {
+                const reader = new FileReader();
 
-        // 當頁面載入完成後執行
-        document.addEventListener("DOMContentLoaded", function () {
-            // 獲取所有包含縮略圖片和視窗的元素
-            const thumbnailImages = document.querySelectorAll(".thumbnail-image");
-            const imagePopups = document.querySelectorAll(".image-popup");
+                reader.onload = function (e) {
+                    $('#previewImage').attr('src', e.target.result);
+                };
 
-            // 對每個圖片進行事件處理
-            thumbnailImages.forEach((thumbnailImage, index) => {
-                // 當滑鼠懸停在圖片上時
-                thumbnailImage.addEventListener("mouseover", function () {
-                    // 顯示對應的原始圖片的視窗
-                    imagePopups[index].style.display = "block";
-                });
-
-                // 當滑鼠移開圖片時
-                thumbnailImage.addEventListener("mouseout", function () {
-                    // 隱藏對應的原始圖片的視窗
-                    imagePopups[index].style.display = "none";
-                });
-            });
+                reader.readAsDataURL(file);
+            } else {
+                alert('請選擇圖片.');
+            }
         });
 
-        function userDelete() {
-            Swal.fire({
-                title: '確定要刪除嗎?',
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, delete it!'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    Swal.fire(
-                        'Deleted!',
-                        'Your file has been deleted.',
-                        'success'
-                    )
+        //儲存按鈕==============================
+        $('#submitButton-edior').click(function () {
+            var id = $('#editor-id').val();
+            var name = $('#editor-name').val()
+            var date = $('#editor-date').val()
+            var fileInput = $('#image');
+            var file = fileInput.files;
+
+            var formData = new FormData();
+            formData.append("BannerId", id);
+            formData.append("Banner", name);
+            formData.append("PublishDate)", date);
+            if (file) {
+                for (var i = 0; i < file.length; i++) {
+                    formData.append("Link", file[i])
+                }
+            }
+
+            $.ajax({
+                url: "@Url.Action("EditBanner","Banner" , new { area="AdminCMS" })",
+                type: "POST",
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: function (response) {
+                    if (response.success) {
+                        Swal.fire({
+                            icon: 'success',
+                            title: '編輯成功',
+                            text: response.message
+                        });
+
+                        $('#EditBannerModalToggle').modal('hide');
+                        $('#Banner-table').DataTable().ajax.reload(); 
+                    }
+                    else {
+                        更新失敗
+                        Swal.fire({
+                            icon: 'error',
+                            title: '失敗',
+                            text: response.message
+                        });
+                    }
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        })
+
+        //新增==================================
+
+        $(document).on("click", "#submitButton", function () {
+            const name = $("#create-name").val();
+            const publishdate = $("#editor-date").val();
+            var fileInput = $("#create-image");
+            var file = fileInput.files;
+
+            let formData = new FormData();
+            formData.append("Banner", name)
+            formData.append("PublishDate", publishdate);
+            if (file) {
+                for (let i = 0; i < file.length; i++) {
+                    formData.append("Link", file[i])
+                }
+            }
+            $.ajax({
+                url: "@Url.Action("CreateBanner" , "Banner" , new { area="AdminCMS" })",
+                type: "POST",
+                data: formData,
+                processData: false,
+                contentType: false,
+                success: function (response) {
+                    alert("Content saved successfully!");
+                    $('#addBannerModalToggle').modal('hide');
+                    $('#Banner-table').DataTable().ajax.reload();
                 }
             })
-        }
+        })
+        //圖片
+        $(document).on("change", "#preview-createimage", function () {
+            var files = $(this)[0].files;
+            var preview = $("#preview-createimage");
+            preview.empty();
+
+            for (var i = 0; i < files.length; i++) {
+                var file = files[i];
+                var img = $("<img>").addClass("img-thumbnail");
+                var reader = new FileReader();
+                reader.onload = (function (aImg) {
+                    return function (e) {
+                        aImg.attr("src", e.target.result);
+                    };
+                })(img);
+                reader.readAsDataURL(file);
+                preview.append(img);
+            }
+        });
+
+
+        //刪除================================================
+
+        $(document).ready(function () {
+            $(document).on("click", ".delete-button", function () {
+                var bannerId = $(this).data("id");
+
+                Swal.fire({
+                    title: '確定要刪除嗎?',
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Yes, delete it!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        var deleteButton = $(this);
+                        $.ajax({
+                            url: "/AdminCMS/Banner/Delete",
+                            type: "POST",
+                            data: { id: bannerId },
+                            success: function (response) {
+                                if (response.success) {
+                                    console.log("項目已成功刪除");
+                                    deleteButton.closest("tr").remove();
+                                    $('#Banner-table').DataTable().ajax.reload();
+                                } else {
+                                    console.log("刪除項目失敗。");
+                                }
+                            },
+                            error: function (error) {
+                                console.log("刪除項目時發生錯誤：", error);
+                            }
+                        });
+                    }
+                });
+            });
+        });
     </script>
 }
 
